@@ -1,13 +1,16 @@
 package com.example.template.admin;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import com.example.template.common.dto.AdminDto;
+import com.example.template.common.dto.AdminDto.AdminResponse;
+import com.example.template.constants.ResponseCode;
+import com.example.template.common.dto.ListResponseDto;
 import com.example.template.model.entity.AdminEntity;
 
 import lombok.RequiredArgsConstructor;
@@ -19,37 +22,64 @@ public class AdminServiceImpl implements AdminService {
 	private final AdminRepository adminRepository;
 	private final AdminRepositoryCustom adminRepositoryCustom;
 
-	@Override
-	public List<AdminDto.AdminResponse> getAdminListV1(Pageable pageable, AdminDto.AdminListRequest condition) {
-		
-		List<AdminEntity> adminEntities = adminRepository.findAdminListV1(
+	public ListResponseDto<AdminDto.AdminResponse> getAdminListV1(Pageable pageable, AdminDto.AdminListRequest condition) {
+        List<AdminEntity> adminEntities = adminRepository.findAdminListV1(
+            condition.getLoginId(),
+            condition.getName(),
+            condition.getEmail(),
+            condition.getPhoneNumber(),
+            pageable.getOffset(),
+            pageable.getPageSize()
+        );
+
+        List<AdminDto.AdminResponse> list = adminEntities.stream()
+            .map(AdminEntity::toAdminResponse)
+            .toList();
+        
+       long totalCount = adminRepository.countAdminListV1(
+               condition.getLoginId(),
+               condition.getName(),
+               condition.getEmail(),
+               condition.getPhoneNumber()
+           );
+
+        return ListResponseDto.of(totalCount, list);
+    }
+
+
+    @Override
+    public long countAdminListV1(AdminDto.AdminListRequest condition) {
+        return adminRepository.countAdminListV1(
                 condition.getLoginId(),
                 condition.getName(),
                 condition.getEmail(),
-                condition.getPhoneNumber(),
-                pageable.getOffset(),
-                pageable.getPageSize()
+                condition.getPhoneNumber()
         );
-		
-        return adminEntities.stream()
-                .map(AdminEntity::toAdminResponse)
-                .collect(Collectors.toList());
-	}
+    }
+
+    @Override
+    public ListResponseDto<AdminDto.AdminResponse> getAdminListV2(Pageable pageable, AdminDto.AdminListRequest condition) {
+        Page<AdminEntity> adminEntities = adminRepository.findAllByOrderByCreatedAtDescIdDesc(pageable);
+
+        List<AdminDto.AdminResponse> list = adminEntities.getContent().stream()
+            .map(AdminEntity::toAdminResponse)
+            .toList();
+
+        return ListResponseDto.of(adminEntities.getTotalElements(), list);
+    }
+
+    @Override
+    public ListResponseDto<AdminDto.AdminResponse> getAdminListV3(Pageable pageable, AdminDto.AdminListRequest condition) {
+        Page<AdminDto.AdminResponse> result = adminRepositoryCustom.searchAdmin(condition, pageable);
+        return ListResponseDto.of(result.getTotalElements(), result.getContent());
+    }
+
 
 	@Override
-	public List<AdminDto.AdminResponse> getAdminListV2(Pageable pageable, AdminDto.AdminListRequest condition) {
-		Page<AdminEntity> adminEntities = adminRepository.findAllByOrderByCreatedAtDescIdDesc(pageable);
-        
-        return adminEntities.getContent().stream()
-        		.map(AdminEntity::toAdminResponse)
-                .collect(Collectors.toList());
-	}
-	
-	@Override
-	public List<AdminDto.AdminResponse> getAdminListV3(Pageable pageable, AdminDto.AdminListRequest condition) {
-		Page<AdminDto.AdminResponse> result = adminRepositoryCustom.searchAdmin(condition, pageable);
-        return result.getContent();
-
+	public AdminResponse getAdminDetail(String id) {
+		AdminEntity admin = adminRepository.findById(id)
+				.orElseThrow(() -> new UsernameNotFoundException(ResponseCode.USER_NAME_NOT_FOUND.getDetail()));
+		return admin.toAdminResponse();
 	}
 
 }
